--- a/student-invitation.html
+++ b/student-invitation.html
@@ -42,7 +42,7 @@
 
                 <div class="card-footer">
                     <p class="farewell-wishes">We can't wait to celebrate with you! 🎓✨</p>
-                    <p class="date" id="cardDate"></p>
+                    <p>December 20, 2025</p>
                 </div>
             </div>
 
