--- a/teacher-invitation.html
+++ b/teacher-invitation.html
@@ -44,7 +44,7 @@
 
                 <div class="card-footer">
                     <p class="farewell-wishes">Your blessings mean the world to us! 🙏✨</p>
-                    <p class="date" id="cardDate"></p>
+                   <p>December 20, 2025</p>
                 </div>
             </div>
 
